tests/negativeTests/functionPlacement1.rit
a = 1
b = 2
c = "msg"
if a < b
  String: func
    -> "abc"

print func
